# MeshConditionalFrontIterator

./: AlwaysTrueCondition.h  CMakeLists.txt  ColorCondition.cpp  ColorCondition.h  Condition.h  DistanceCondition.cpp  DistanceCondition.h  Helpers.cpp  Helpers.h  NormalCondition.cpp  NormalCondition.h  vtkMeshConditionalFrontIterator.cxx  vtkMeshConditionalFrontIterator.h  vtkMeshConditionalFrontIteratorColorExample.cxx  vtkMeshConditionalFrontIteratorDefaultExample.cxx  vtkMeshConditionalFrontIteratorDemo.cxx  vtkMeshConditionalFrontIteratorDistanceExample.cxx  vtkMeshConditionalFrontIteratorMultipleExample.cxx  vtkMeshConditionalFrontIteratorNormalExample.cxx  vtkMeshFrontIterator.cxx  vtkMeshFrontIterator.cxx.bak  vtkMeshFrontIterator.h  vtkMeshFrontIteratorDemo.cxx  vtkMeshFrontIteratorExample.cxx  vtkMeshFrontIteratorTest.cxx  vtkMeshNormalConditionFrontIterator.cxx  vtkMeshNormalConditionFrontIterator.h  vtkPolyDataKeepPoints.cxx  vtkPolyDataKeepPoints.h  vtkPolyDataKeepPointsDemo.cxx  vtkPolyDataKeepPointsExample.cxx
Article/: vtkMeshConditionalFrontIterator.out  vtkMeshConditionalFrontIterator.tex  vtkMeshConditionalFrontIterator.tex.backup
Article/source/: CMakeLists.txt  vtkMeshConditionalFrontIterator.cxx  vtkMeshConditionalFrontIterator.h  vtkMeshConditionalFrontIteratorExample.cxx  vtkMeshConditionalFrontIteratorTest.cxx  vtkMeshFrontIterator.cxx  vtkMeshFrontIterator.h
Article/source/vtkMeshConditionalFrontIterator/: CMakeLists.txt  Doxyfile  vtkMeshConditionalFrontIterator.kdevelop.pcs
Article/source/vtkMeshConditionalFrontIterator/data/: CarsMesh.vtp  CarsMeshEdges.vtp  CarsQuality.vtp  car.vtp
old/: vtkMeshNormalConditionFrontIteratorDemo.cxx  vtkMeshNormalConditionFrontIteratorDemo.cxx.bak
